--- a/src/main/resources/templates/thymeleaf/band/myBand.html
+++ b/src/main/resources/templates/thymeleaf/band/myBand.html
@@ -143,7 +143,7 @@
                                		
                                		
                                		 <!-- 수정 및 삭제 버튼  -->
-	                               <th:block th:if="${myBandFeedList.getMember_id() == session.Member_Id}">
+	                               <th:block th:if="${myBandFeedList.getMember_id() == session.Member_Id || session.Member_Id eq 'admin'}">
 								
 									<div class="f17 hstack ms-auto d-md-inline-block" id="feed-right">
 										<a
@@ -154,7 +154,7 @@
 										<ul class="dropdown-menu dropdown-menu-dark">
 											<li data-bs-toggle="modal" data-bs-target="#feed_del_Modal"><a
 												class="dropdown-item">삭제</a></li>
-											<li>
+											<li th:if="${myBandFeedList.getMember_id() == session.Member_Id}">
 												<form action="bandFeedUpdate" method="post">
 													<input type="hidden" name="bandUrl"
 														th:value="${myBandFeedList.getBand_code()}" /> <input
