--- a/src/main/resources/templates/thymeleaf/band/myBand_feedView.html
+++ b/src/main/resources/templates/thymeleaf/band/myBand_feedView.html
@@ -142,7 +142,7 @@
 
                             	
                             <!-- 수정 및 삭제 버튼  -->
-                               <th:block th:if="${myBandFeedList.getMember_id() == session.Member_Id}">
+                               <th:block th:if="${myBandFeedList.getMember_id() == session.Member_Id || session.Member_Id == 'admin'}">
 							
 								<div class="f17 hstack ms-auto" id="feed-right">
 									<a
@@ -153,7 +153,7 @@
 									<ul class="dropdown-menu dropdown-menu-dark">
 										<li data-bs-toggle="modal" data-bs-target="#feed_del_Modal"><a
 											class="dropdown-item">삭제</a></li>
-										<li>
+										<li th:if="${myBandFeedList.getMember_id() == session.Member_Id}">
 											<form action="bandFeedUpdate" method="post">
 												<input type="hidden" name="bandUrl"
 													th:value="${myBandFeedList.getBand_code()}" /> <input
@@ -221,7 +221,7 @@
 										</div>
 										
 										 <!-- 수정 및 삭제 버튼  -->
-										<th:block th:if="${bandFeedCommentAll.getMember_Id() == session.Member_Id}">
+										<th:block th:if="${bandFeedCommentAll.getMember_Id() == session.Member_Id || session.Member_Id == 'admin'}">
 											<div class="f17 hstack col-1 ms-auto feedView_dropdown" id="feed-right">
 												<a
 													class="dropdown-toggle text-center m-0 ps-2 pt-1 d-block d-flex justify-content-end"
