--- a/src/main/resources/templates/thymeleaf/Member/mypage.html
+++ b/src/main/resources/templates/thymeleaf/Member/mypage.html
@@ -38,17 +38,17 @@
                     </a> -->
                     <a href="/band" class="my-menu-ico">
                     <div class="rounded-circle overflow-hidden m-1 p-1 mb-0 bg-white">
-                        <img src="../img/mypage/menu_ico_2.png" class="img-fluid p-2" alt="...">
+                        <img src="../img/mypage/menu_ico_2.png" class="img-fluid p-2" width="64" height="64" alt="...">
                     </div>
                     <span>소모임</span>
                 </a><a href="/feed" class="my-menu-ico">
                     <div class="rounded-circle overflow-hidden m-1 p-1 mb-0 bg-white">
-                        <img src="../img/mypage/menu_ico_3.png" class="img-fluid p-2" alt="...">
+                        <img src="../img/mypage/menu_ico_3.png" class="img-fluid p-2" width="64" height="64" alt="...">
                     </div>
                     <span>피드</span>
                 </a><a href="/infoCourse" class="my-menu-ico">
                     <div class="rounded-circle overflow-hidden m-1 p-1 mb-0 bg-white">
-                        <img src="../img/mypage/menu_ico_4.png" class="img-fluid p-2" alt="...">
+                        <img src="../img/mypage/menu_ico_4.png" class="img-fluid p-2" width="64" height="64" alt="...">
                     </div>
                     <span>코스</span>
                 </a>
