--- a/src/main/resources/templates/thymeleaf/Member/mypage.html
+++ b/src/main/resources/templates/thymeleaf/Member/mypage.html
@@ -134,7 +134,7 @@
 	                                            <div class="card border-0 my-history-content-card text-center" >
 	                                               <img th:src="@{'../img/info/'+${courseReseveList.getCourse_img()}}" class="mb-3 mypage_bandImg rounded-4" alt="">
 	                                                <span class="text-start text-truncate py-0 my-0" th:text="|코스 : ${courseReseveList.getCourse_name()}|">코스 명</span>
-	                                                <span class="text-start text-truncate py-0 my-0" th:text="|금액 : ${courseReseveList.getAmount()}|">예상금액</span>
+	                                                <span class="text-start text-truncate py-0 my-0" th:text="|금액 : ${courseReseveList.getAmount() / 2}|">예상금액</span>
 	                                                <span class="text-start text-truncate py-0 my-0" th:text="|결제일 : ${courseReseveList.getPay_date()}|">결제일</span>
 	                                                
 	                                            </div>
