--- a/src/main/resources/templates/thymeleaf/aicc/saveCourseday3.html
+++ b/src/main/resources/templates/thymeleaf/aicc/saveCourseday3.html
@@ -223,6 +223,7 @@
 					<input type="hidden" name="day" th:value="${day}"/>
 					<input type="hidden" name="img" th:value="${aicc.get(0).getEvent_thumbnail()}"/>
 					<input type="hidden" id="amount" name="amount" th:value="${realAmount}" />
+					<input type="hidden" id="amountQ" name="amountQ" th:value="${amountQ}" />
 					<input type="hidden" id="discount" name="discount" th:value="${discount}" />
 					<div class="col-12 mx-auto mt-4 text-end d-flex justify-content-between">
 						<button type="button" id="btn-pay" class="btn btn-main rounded-pill btn-map-step hstack">
