--- a/src/main/resources/templates/nav/nav.html
+++ b/src/main/resources/templates/nav/nav.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	
-	<nav class="mt-3 mb-0 sticky-top" th:fragment="nav">
+	<nav class=" mb-0 sticky-top" th:fragment="nav">
 		<div id="nav" class="p-0 m-auto row container-fluid px-0 navbar navbar-expand-md d-flex justify-content-center  bg-white shadow-sm">
 <!-- 	<nav
 		class="mt-3 mb-0 navbar navbar-expand-md d-flex justify-content-center sticky-top bg-white shadow-sm"
