--- a/src/main/resources/templates/thymeleaf/band/bandChat.html
+++ b/src/main/resources/templates/thymeleaf/band/bandChat.html
@@ -34,28 +34,35 @@
 	                        class="img-fluid join_band_item_img" alt="...">
 	                  </div>
 	                  <div class="myBand_title_name d-flex justify-content-between text-truncate">
-	                     <h3 th:text="${myBandList.getBand_name()}" class="text-truncate my-3 h4"></h3>
+	                  	<a th:href="@{'/myBand?bandUrl='+${myBandList.getBand_code()}}">
+	                  		<h3 th:text="${myBandList.getBand_name()}" class="text-truncate my-3 h4"></h3>
+	                  	</a>
 		              </div>
 	                  <!-- 로그인 아이디와 밴드 관리자 아이디가 같을 때 -->
 	                     <th:block th:if="${session.Member_Id ne null}">
 	                        <th:block
-	                           th:if="${ session.Member_Id eq myBandList.getBand_admin() }">
+	                           th:if="${ session.Member_Id eq myBandList.getBand_admin() || session.Member_Id eq 'admin' }">
 	                           <a
 	                              th:href="@{'setMyBand?bandUrl='+${myBandList.getBand_code()}}"
-	                              class="myBand_adminBandSet py-1 hstack d-flex float-end"><span class="hstack">밴드 설정</span></a>
+	                              class="myBand_adminBandSet py-1 hstack d-flex float-end"><span class="hstack">동행 설정</span></a>
 	                        </th:block>
 	                        <th:block
-	                           th:if="${ session.Member_Id ne myBandList.getBand_admin() and  checkMember ne null}">
+	                           th:if="${ session.Member_Id ne myBandList.getBand_admin() and  checkMember ne null && session.Member_Id ne 'admin' }">
 	                           <a
 	                              th:href="@{'withdrawalMyBand?bandUrl='+${myBandList.getBand_code()}}"
 	                              class="myBand_memberBandSet py-1 hstack d-flex float-end"
-	                              onclick="return func_bandWithdrawal() ">밴드 탈퇴하기</a>
+	                              onclick="return func_bandWithdrawal() ">동행 탈퇴하기</a>
 	                        </th:block>
 	                     </th:block>
 	                  <div id="myBand_member_countBtn" class="myBand_member_count" onclick="return func_bandMember()">
-	                     <a class="myBandLink" th:href="@{'/mybandMember?bandUrl='+${myBandList.getBand_code()}}">
-	                        <span class="f13" th:text="|멤버  ${myBandList.getBand_memberCount()} 명|"></span>
-	                     </a>
+	                     <div th:if="${checkMember eq null && session.Member_Id ne 'admin'}">
+       	                	<span id="myBand_memberBtn" class="f13" th:text="|멤버  ${myBandList.getBand_memberCount()} 명|"></span>
+	                     </div>
+	                     <div th:if="${checkMember ne null || session.Member_id == 'admin'}">
+	                     	<a class="myBandLink" th:href="@{'/mybandMember?bandUrl='+${myBandList.getBand_code()}}">
+	                        	<span class="f13" th:text="|멤버  ${myBandList.getBand_memberCount()} 명|"></span>
+	                     	</a>
+	                     </div>
 	                  </div>
 	                  <hr />
 	                  <div class="myBand_info">
@@ -70,7 +77,7 @@
 	                           <input name="bandCode" type="hidden" th:value="${myBandList.getBand_code()}" />
 	                           <input name="joinMemberId" type="hidden" th:value="${session.Member_Id}" />
 	                           <a href="javascript:addMember_band.submit();" >
-	                              <span>가입하기</span>
+	                              <span>동행 가입하기</span>
 	                           </a>                        
 	                        </div>      
 	                     </form>
@@ -83,8 +90,10 @@
 	                        </a>
 	                     </div>
 	                  </th:block>
-						
-						<!-- 밴드 채팅 리스트 영역 -->
+	                  
+	                  
+	                  
+	                  <!-- 밴드 채팅 리스트 영역 -->
 	                  <!-- <th:block th:if="${session.Member_Id ne null}">
 	                     <div class="band_chatBox px-1 mt-5 w-100">
 	                        <div class="band_chat col-12">
@@ -96,8 +105,9 @@
 	                        </div>
 	                     </div> band_chatBox
 	                  </th:block> -->
-					</div> <!-- myBand_content_col_title -->
-				</div> <!-- myBand_content_col_titleBox : 밴드 정보 -->
+	                  
+	               </div> <!-- myBand_content_col_title -->
+	            </div> <!-- myBand_content_col_titleBox : 밴드 정보 -->
 
 
 				<!-- col2 채팅 출력 영역 -->
