--- a/src/main/resources/templates/thymeleaf/info/info.html
+++ b/src/main/resources/templates/thymeleaf/info/info.html
@@ -10,16 +10,34 @@
 			<div class="row">
 				<div class="col-12">
 					<h3 class="text-bold">
-						# <span th:text="${showTag}"></span>
+						<span th:text="${showTag}"></span>
 						<th:block th:if="${area.size == 1}">
 							<span th:text="${showArea}"></span>
 						</th:block>
 
-						<th:block th:unless="${area.size == 1}">전체</th:block>
+						<th:block th:unless="${area.size == 1}"></th:block>
 					</h3>
 				</div>
 			</div>
 			<!--board-->
+			   <!-- 피드목록이 비어있을 때 -->
+         <th:block th:if="${getCount} == 0">
+
+      <div th:if="${#lists.isEmpty(feedList)}">
+         <div class="row">
+            <div class="col text-center py-5 my-5">
+               <img src="../img/feed/out-of-stock.png" class="mb-4" width="100"
+                  height="100" alt="" /> <span class="h5 text-muted"> <span
+                  th:if="${not #strings.isEmpty(feed_theme)}"
+                  th:text="${feed_theme}"></span> <span th:if="${feed_area}!=null"
+                  th:text="${feed_area}">feed_area</span><br /> 키워드에 대한 데이터가 없습니다. 다른 키워드를 입력해주세요.
+               </span>
+                 
+            </div>
+         </div>
+      </div>
+      </th:block>
+      <th:block th:if="${getCount} != 0">
 			<div class="row gap-4">
 				<div class="col-12 col-lg-7 order-2">
 					<hr>
@@ -210,6 +228,7 @@
 				<div class="col-12 text-end mt-3">
 					<a th:href="@{'Event_write_content'}" class="btn btn-main"> 글쓰기</a>
 				</div>
+			</th:block>
 			</th:block>
 		</div>
 
