--- a/src/main/resources/templates/thymeleaf/Member/mypage.html
+++ b/src/main/resources/templates/thymeleaf/Member/mypage.html
@@ -262,13 +262,11 @@
                                         <img th:src="@{'../img/info/' + ${course.getCourse_img()}}" alt=""
                                              class="img-fluid">
                                     </div>
-                                    <span class="f12 text-muted mt-2 "
-                                          th:text="${course.getCourse_Name()}">사용자지정태그</span><span
-                                        class="f14 text-truncate" th:text="${course.getCourse_content()}">맥주여행! 이렇게만 하세요🍺</span><img
-                                        th:src="@{'../img/member_thumbnail/'+${course.getMember_profileimage()}}"
-                                        class="rounded-circle" width="19" alt=""><span
-                                        class="d-inline f12 text-muted px-1"
-                                        th:text="${course.getMember_Id}">userName</span>
+                                    <span class="f12 text-muted mt-2" th:text="${course.getCourse_Name()}"  >사용자지정태그</span>
+                                    <span class="f14 text-truncate" th:utext="${course.getCourse_content()}" style="height : 20px;">맥주여행! 이렇게만 하세요🍺</span>
+                                    <img th:src="@{'../img/member_thumbnail/'+${course.getMember_profileimage()}}" class="rounded-circle" width="19" alt="" >
+                                    <span class="d-inline f12 text-muted px-1" th:text="${course.getMember_Id}">userName</span>
+                                        
                                 </a>
                             </th:block>
                         </div>
